--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-multi-carousel": "^2.8.4",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.29.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
